--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="header-content">
                 <div class="logo">
-                    <img src="../asstes/images/002.png" alt="manass-logo" class="n">
+                    <img src="002.png" alt="manass-logo" class="n">
                     <h1>Membership QR Code Generator</h1>
                 </div>
                 <p class="subtitle">Create a QR code with all member details including photo and guarantor information</p>
