--- a/index.html
+++ b/index.html
@@ -458,5 +458,7 @@
 <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
 <script src="./asstes/js/index.js"></script>
     <script src="./asstes/js/index.js"></script>
+    <script src="./asstes/js/api.js"></script>
+    <script src="./asstes/js/api1.js"></script>
 </body>
 </html>
